@@ -187,6 +187,7 @@ div.mainbox, table.mainbox td {
 .mainbox div p,
 .mainbox table p     { margin: 0; }
 .mainbox h2          { font-weight: bold; font-size: 14px; margin: 10px 0 0 5px; }
+a.addnew, p.addnew   { float: right; margin: 0 }
 
 .mainbox.threelayout    { border-collapse: separate; border-spacing: 10px; margin: 10px -10px -20px -10px; min-width: 100%; }
 .mainbox.threelayout td { width: 32%; padding: 0 2px 10px 2px; }
@@ -365,7 +366,6 @@ div#vntags                    { margin: 15px 30px 0 30px; border-top: 1px solid 
 .releases td.tc5       { width: 70px; }
 .releases td.tc5 a     { color: $maintext$; border: 0; }
 .releases td.tc6       { text-align: right; width: 25px; padding: 0; }
-a.addnew               { float: right; }
 
 #screenshots p.rel {
   background: url($_boxbg$) repeat;
