@@ -441,7 +441,11 @@ sub _releases {
   my($self, $v, $r) = @_;
 
   div class => 'mainbox releases';
-   a class => 'addnew', href => "/v$v->{id}/add", mt '_vnpage_rel_add';
+   p class => 'addnew';
+    a href => "/c/new?vid=$v->{id}", mt '_vnpage_char_add';
+    txt ' | ';
+    a href => "/v$v->{id}/add", mt '_vnpage_rel_add';
+   end;
    h1 mt '_vnpage_rel';
    if(!@$r) {
      p mt '_vnpage_rel_none';
